<resources>
    <string name="app_name">ProInteSo Movil</string>
    <string name="btingresar">Iniciar Sesión</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="VerInformacion">Ver mi información</string>
    <string name="VerCitas">Ver mis citas</string>
    <string name="peso">Peso</string>
    <string name="estatura">Estatura</string>
    <string name="talla">Talla</string>
    <string name="email">Email</string>
    <string name="tel">Teléfono</string>
    <string name="domicilio">Domicilio</string>
    <string name="usuario">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="foto">Foto</string>
    <string name="actualizar">Actualizar Información</string>
    <string name="VerDietas">Ver mis dietas</string>
    <string name="title_activity_consultas">ConsultasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
